--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,3 +3,9 @@
 @import "./base/base";
 @import "./base/typography";
 @import "./base/utilities";
+@import "./components/button";
+@import "./components/featurebox";
+@import "./layout/header";
+@import "./layout/general";
+@import "./layout/footer";
+@import "./pages/home";
