--- a/css/style.css
+++ b/css/style.css
@@ -427,20 +427,20 @@ body {
   color: #0055a7;
   text-transform: uppercase;
   font-family: "Rubik";
-  font-weight: bold;
-  font-size: 18px; }
+  font-weight: 900;
+  font-size: 16px; }
 
 .btn__primary {
-  font-size: 24px;
+  font-size: 16px;
   font-family: "Roboto";
-  font-weight: 500;
+  font-weight: 900;
   text-decoration: none;
   color: #0055a7; }
 
 .heading__primary {
   font-family: "Rubik";
-  font-weight: 700;
-  font-size: 72px;
+  font-weight: 900;
+  font-size: 60px;
   color: #ffffff; }
 
 .heading__secondary {
@@ -456,7 +456,7 @@ body {
   font-family: "Rubik";
   font-weight: 400; }
   .text__secondary {
-    font-size: 24px;
+    font-size: 18px;
     color: #ffffff;
     line-height: 40px; }
   .text__primary {
@@ -469,14 +469,14 @@ body {
   .text__copyright {
     font-family: "Rubik";
     font-weight: 500;
-    font-size: 24px;
+    font-size: 16px;
     line-height: 40px;
     color: #ffffff; }
 
 .footer__link {
   color: #ffffff;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 16px;
   line-height: 27px;
   font-family: "Rubik";
   text-decoration: none; }
@@ -486,6 +486,12 @@ body {
 
 .u_center_text {
   text-align: center; }
+
+.flex {
+  display: flex; }
+
+.align__right {
+  text-align: right; }
 
 .btn__primary {
   padding: 10px 30px;
@@ -522,17 +528,18 @@ body {
   padding: 30px 0; }
   .header__container .menu__list {
     display: flex;
-    align-items: flex-end; }
+    align-items: center;
+    margin-top: 15px; }
   .header__container .menu__item {
-    margin-right: 10px; }
+    margin-right: 25px; }
     .header__container .menu__item:last-child {
       margin-right: 0; }
 
 .header__logo {
   display: flex;
-  align-items: flex-end; }
+  align-items: center; }
   .header__logo img {
-    height: 60px; }
+    height: 40px; }
 
 .header__btn {
   display: flex;
@@ -555,7 +562,13 @@ body {
 
 .footer {
   background-color: #0055a7;
-  padding: 40px 0 20px 0; }
+  padding: 40px 0 20px 0;
+  margin-top: 150px; }
+  .footer__logo {
+    margin-bottom: 40px; }
+    .footer__logo img {
+      height: 60px;
+      width: auto; }
   .footer__center {
     display: flex;
     justify-content: space-between; }
@@ -570,6 +583,8 @@ body {
         margin-right: 0; }
     .footer__social-link img {
       height: 35px; }
+  .footer__copyright {
+    margin-top: 20px; }
 
 .section__hero {
   height: 500px;
@@ -587,7 +602,7 @@ body {
       height: 350px; }
 
 .section__container {
-  margin-top: 70px; }
+  margin-top: 100px; }
 
 .section__title--1 {
   text-align: center;
@@ -599,6 +614,51 @@ body {
 .section__img {
   display: flex;
   justify-content: center; }
+  .section__img .img__discord {
+    height: 150px; }
   .section__img img {
     height: 350px;
     width: auto; }
+
+.section__content .platform__images {
+  display: flex;
+  justify-content: center; }
+
+.section__content .platform__image {
+  margin-right: 25px;
+  display: flex;
+  align-items: center; }
+  .section__content .platform__image:last-child {
+    margin-right: 0; }
+
+.section__features {
+  position: relative; }
+  .section__features .bg__container {
+    display: flex;
+    justify-content: flex-end; }
+  .section__features-bg {
+    margin-top: -500px;
+    background-position: center;
+    background-size: cover;
+    height: 662px;
+    width: 600px;
+    background-repeat: no-repeat;
+    background-image: url("../assets/img/features-bg.png"); }
+    .section__features-bg img {
+      height: 600px;
+      width: auto; }
+
+.section__demo .bg__container {
+  display: flex;
+  justify-content: flex-start;
+  position: relative; }
+
+.section__demo-bg {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  height: 400px;
+  width: 488px;
+  background-repeat: no-repeat;
+  background-image: url("../assets/img/demo-bg.png");
+  margin-top: -100px; }
