--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,16 @@
 .footer {
     background-color: $color-primary;
     padding: 40px 0 20px 0;
+    margin-top: 150px;
+
+    &__logo {
+        margin-bottom: 40px;
+        img {
+            height: 60px;
+            width: auto;
+        }
+    }
+
     &__center {
         display: flex;
         justify-content: space-between;
@@ -23,5 +33,8 @@
                 height: 35px;
             }
         }
+    }
+    &__copyright {
+        margin-top: 20px;
     }
 }
