--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,33 +1,34 @@
 .header {
-  &__container {
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 0;
 
-    .menu {
-      &__list {
+        .menu {
+            &__list {
+                display: flex;
+                align-items: center;
+                margin-top: 15px;
+            }
+
+            &__item {
+                margin-right: 25px;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+    &__logo {
+        display: flex;
+        align-items: center;
+        img {
+            height: 40px;
+        }
+    }
+    &__btn {
         display: flex;
         align-items: flex-end;
-      }
-
-      &__item {
-        margin-right: 10px;
-
-        &:last-child {
-          margin-right: 0;
-        }
-      }
     }
-  }
-  &__logo {
-    display: flex;
-    align-items: flex-end;
-    img {
-      height: 60px;
-    }
-  }
-  &__btn {
-    display: flex;
-    align-items: flex-end;
-  }
 }
