Adds links to discord and patreon images

--- a/css/style.css
+++ b/css/style.css
@@ -665,3 +665,7 @@ body {
   background-repeat: no-repeat;
   background-image: url("../assets/img/demo-bg.png");
   margin-top: -100px; }
+
+.section__patreon .patreon__img img {
+  height: 80px;
+  width: auto; }
