--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -38,3 +38,22 @@
         margin-top: 20px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .footer {
+        &__center {
+            flex-direction: column;
+            justify-content: center;
+        }
+        &__list {
+            margin-bottom: 20px;
+        }
+        &__item {
+            text-align: center;
+        }
+        &__social {
+            justify-content: center;
+            margin: 20px 0;
+        }
+    }
+}
