--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -173,7 +173,9 @@
         &__hero {
             height: 400px;
         }
-
+        &__container {
+            margin-top: 70px;
+        }
         &__progress {
             .img__devices {
                 img {
