--- a/css/style.css
+++ b/css/style.css
@@ -401,12 +401,20 @@ textarea {
   color: #000;
   padding: 0.2em 0; }
 
+.fade-in {
+  opacity: 0;
+  transition: opacity 250ms ease-in; }
+
+.fade-in.appear {
+  opacity: 1; }
+
 html,
 body {
   font-size: 16px;
   background-color: #fef8f5;
   position: relative;
-  z-index: -10; }
+  z-index: -10;
+  overflow-x: hidden; }
 
 @media screen and (max-width: 576px) {
   html,
@@ -509,6 +517,17 @@ body {
 
 .align__right {
   text-align: right; }
+
+.from {
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  opacity: 0; }
+  .from.appear {
+    transform: translateX(0);
+    opacity: 1; }
+  .from__right {
+    transform: translateX(50%); }
+  .from__left {
+    transform: translateX(-50%); }
 
 @media screen and (max-width: 1024px) {
   .next__line {
