--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,6 +4,7 @@ body {
     background-color: $color-bg;
     position: relative;
     z-index: -10;
+    overflow-x: hidden;
 }
 @media screen and (max-width: 576px) {
     html,
