--- a/css/style.css
+++ b/css/style.css
@@ -613,12 +613,16 @@ body {
   margin: 0 auto; }
 
 .grid-of-2 {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: 1fr 1fr;
   grid-column-gap: 40px; }
 
 .grid-of-3 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 40px;
   grid-row-gap: 120px; }
