--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -42,7 +42,7 @@
     .header {
         &__mobile {
             &-icon {
-                display: flex;
+                display: block;
             }
         }
 
