--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -52,12 +52,14 @@
 }
 
 .btn {
+    font-size: 18px;
+    font-family: "Rubik";
+    text-decoration: none;
     &__primary {
         font-size: 16px;
         font-family: "Roboto";
         font-weight: 900;
         text-decoration: none;
-        color: $color-primary;
     }
 }
 .heading {
@@ -67,14 +69,26 @@
         font-size: 60px;
         color: $color-white;
     }
+    &__tertiary {
+        font-family: "Rubik";
+        font-weight: 700;
+        font-size: 36px;
+        color: $color-primary;
+    }
     &__secondary {
         font-family: "Rubik";
         font-weight: 700;
         font-size: 24px;
         line-height: 40px;
-        text-transform: uppercase;
         color: $color-primary;
         letter-spacing: 2px;
+
+        &--1 {
+            color: $color-primary;
+        }
+        &--2 {
+            color: $color-white;
+        }
     }
 }
 
@@ -102,6 +116,12 @@
         line-height: 40px;
         color: $color-white;
     }
+    &__helper {
+        font-family: "Rubik";
+        font-size: 16px;
+        color: $color-gray;
+        font-weight: 500;
+    }
 }
 .footer {
     &__link {
@@ -118,6 +138,9 @@
         &__primary {
             line-height: 1.2;
         }
+        &__tertiary {
+            font-size: 24px;
+        }
     }
 }
 
@@ -125,6 +148,9 @@
     .heading {
         &__primary {
             font-size: 36px;
+        }
+        &__tertiary {
+            font-size: 24px;
         }
     }
     .text {
