--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,17 @@
 @import "./base/reset";
 @import "./abstracts/variables";
 @import "./abstracts/animations";
+@import "./abstracts/mixins";
 @import "./base/base";
 @import "./base/typography";
 @import "./base/utilities";
 @import "./components/button";
 @import "./components/featurebox";
+@import "./components/mobilemenu";
+@import "./components/card";
+@import "./components/form";
 @import "./layout/header";
 @import "./layout/general";
 @import "./layout/footer";
 @import "./pages/home";
+@import "./pages/signin";
