--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,18 @@ body {
   .heading__secondary--1 {
     color: #0055a7; }
   .heading__secondary--2 {
-    color: #ffffff; }
+    color: #ffffff;
+    font-family: "Roboto"; }
+  .heading__secondary--3 {
+    color: #000000;
+    font-family: "Roboto";
+    font-size: 30px;
+    font-weight: 700; }
+  .heading__secondary--4 {
+    color: #000000;
+    font-family: "Roboto";
+    font-size: 24px;
+    font-weight: 700; }
 
 .text {
   font-family: "Rubik";
@@ -488,22 +499,36 @@ body {
     line-height: 40px; }
   .text__primary {
     font-weight: 300;
-    font-size: 15px;
+    font-size: 16px;
     font-family: "Rubik";
     line-height: 40px;
     color: #402b2b;
     letter-spacing: 1px; }
+    .text__primary--1 {
+      font-weight: 400;
+      font-family: "Roboto";
+      font-size: 16px;
+      color: rgba(0, 0, 0, 0.6);
+      line-height: 1.5; }
+    .text__primary--2 {
+      font-weight: 400;
+      font-family: "Rubik";
+      font-size: 16px;
+      color: rgba(0, 0, 0, 0.6);
+      line-height: 1.2; }
   .text__copyright {
     font-family: "Rubik";
     font-weight: 500;
     font-size: 16px;
     line-height: 40px;
     color: #ffffff; }
-  .text__helper {
-    font-family: "Rubik";
-    font-size: 16px;
-    color: #c8c8c8;
-    font-weight: 500; }
+
+.card__download {
+  font-size: 16px;
+  font-family: "Roboto";
+  text-decoration: none;
+  color: #0055a7;
+  font-weight: 500; }
 
 .footer__link {
   color: #ffffff;
@@ -512,6 +537,12 @@ body {
   line-height: 27px;
   font-family: "Rubik";
   text-decoration: none; }
+
+.link__primary {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 16px;
+  color: rgba(0, 85, 167, 0.9); }
 
 @media screen and (max-width: 1024px) {
   .heading__primary {
@@ -544,6 +575,18 @@ body {
 .uppercase {
   text-transform: uppercase; }
 
+.bold {
+  font-weight: 900; }
+
+.margin__bottom--medium {
+  margin-bottom: 20px; }
+
+.margin__large {
+  margin: 40px 0; }
+
+.near__invisible {
+  opacity: 0.3; }
+
 .from {
   transition: opacity 250ms ease-in, transform 400ms ease-in;
   opacity: 0; }
@@ -559,35 +602,40 @@ body {
   .next__line {
     display: inline; } }
 
-.btn__primary {
-  padding: 10px 30px;
-  border-radius: 10px;
-  border: 2px solid #0055a7;
-  color: #0055a7;
-  background-color: #ffffff; }
-
-.btn__secondary {
-  padding: 10px 30px;
-  border-radius: 10px;
-  border: 2px solid #ffffff;
-  color: #ffffff;
-  font-size: 18px;
-  font-family: "Rubik";
-  text-decoration: none; }
-
-.btn__tertiary {
-  padding: 10px 50px;
-  border-radius: 40px;
-  border: 2px solid #ffffff;
-  background-color: #0055a7;
-  color: #ffffff; }
-
-.btn__form {
-  padding: 10px 70px;
-  border-radius: 40px;
-  background-color: #0055a7;
-  color: #ffffff;
-  border: none; }
+.btn {
+  cursor: pointer; }
+  .btn__primary {
+    padding: 10px 30px;
+    border-radius: 10px;
+    border: 2px solid #0055a7;
+    color: #0055a7;
+    background-color: #ffffff; }
+    .btn__primary--1 {
+      padding: 10px 30px;
+      border-radius: 10px;
+      border: none;
+      background-color: #0055a7;
+      color: #ffffff; }
+  .btn__secondary {
+    padding: 10px 30px;
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    font-size: 18px;
+    font-family: "Rubik";
+    text-decoration: none; }
+  .btn__tertiary {
+    padding: 10px 50px;
+    border-radius: 40px;
+    border: 2px solid #ffffff;
+    background-color: #0055a7;
+    color: #ffffff; }
+  .btn__form {
+    padding: 10px 70px;
+    border-radius: 40px;
+    background-color: #0055a7;
+    color: #ffffff;
+    border: none; }
 
 .feature__box {
   background: #ffffff;
@@ -649,7 +697,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-top: 30px; }
+    padding: 30px 50px; }
   .card__title {
     margin-bottom: 40px; }
 
@@ -887,6 +935,34 @@ body {
   height: 80px;
   width: auto; }
 
+.section__cookie {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  background-color: #ffffff;
+  z-index: 20;
+  width: 60%;
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.25);
+  display: none;
+  transition: all 0.5s ease; }
+  .section__cookie.show {
+    display: flex; }
+  .section__cookie .cookie__container {
+    display: flex;
+    align-items: center; }
+    .section__cookie .cookie__container .cookie__img {
+      display: flex;
+      align-items: center; }
+      .section__cookie .cookie__container .cookie__img img {
+        height: 70px;
+        width: auto; }
+    .section__cookie .cookie__container .cookie__content {
+      padding: 15px 10px; }
+    .section__cookie .cookie__container .cookie__text {
+      margin-bottom: 20px; }
+    .section__cookie .cookie__container .cookie__buttons {
+      margin-bottom: 20px; }
+
 @media screen and (max-width: 1024px) {
   .section__hero .hero__img {
     display: none; }
@@ -944,3 +1020,30 @@ body {
     z-index: -1; }
     .body__signin .background__bottom img {
       height: 400px; }
+
+.card__terms {
+  box-shadow: 0px 1px 50px 3px rgba(0, 0, 0, 0.25);
+  margin-bottom: 50px; }
+  .card__terms .card__logo {
+    margin-right: 40px; }
+    .card__terms .card__logo img {
+      height: 40px; }
+  .card__terms .card__header {
+    background-color: #0055a7;
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    margin-bottom: 40px; }
+  .card__terms .card__body {
+    padding: 50px; }
+  .card__terms .card__title {
+    margin-bottom: 0; }
+    .card__terms .card__title .heading__secondary {
+      margin-top: 10px; }
+  .card__terms .card__heading {
+    margin: 40px 0; }
+  .card__terms .card__footer {
+    padding: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
