--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -21,7 +21,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        padding-top: 30px;
+        padding: 30px 50px;
     }
 
     &__title {
