--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -111,6 +111,44 @@
             }
         }
     }
+    &__cookie {
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        background-color: $color-white;
+        z-index: 20;
+        width: 60%;
+        box-shadow: 0px 20px 30px rgba($color-black, 0.25);
+        display: none;
+        transition: all 0.5s ease;
+        &.show {
+            display: flex;
+        }
+        .cookie__container {
+            display: flex;
+            align-items: center;
+
+            .cookie {
+                &__img {
+                    display: flex;
+                    align-items: center;
+                    img {
+                        height: 70px;
+                        width: auto;
+                    }
+                }
+                &__content {
+                    padding: 15px 10px;
+                }
+                &__text {
+                    margin-bottom: 20px;
+                }
+                &__buttons {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
 }
 @media screen and (max-width: 1024px) {
     .section {
