--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -252,6 +252,7 @@
 
         &__cookie {
             width: 100%;
+            right: 0;
             .cookie {
                 &__buttons {
                     div {
