--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -251,8 +251,9 @@
         }
 
         &__cookie {
-            width: 100%;
+            width: 90%;
             right: 0;
+            bottom: 0;
             .cookie {
                 &__buttons {
                     div {
