--- a/css/style.css
+++ b/css/style.css
@@ -945,6 +945,7 @@ body {
   z-index: 20;
   width: 60%;
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
   display: none;
   transition: all 0.5s ease; }
   .section__cookie.show {
