--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -119,6 +119,7 @@
         z-index: 20;
         width: 60%;
         box-shadow: 0px 20px 30px rgba($color-black, 0.25);
+        border-radius: 10px;
         display: none;
         transition: all 0.5s ease;
         &.show {
